--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -21,6 +21,6 @@
         = link_to "Details", location_path(loc), class: "btn btn-outline-primary btn-sm"
 
 %br
-  = link_to "Back to Home", root_url, class: 'btn btn-secondary btn-sm spacing home-link'
+  = link_to "Back to Home", root_url, class: 'btn btn-secondary btn-sm  home-link'
   -if @admin
-    = link_to "Add new location", new_location_url, class: 'btn btn-primary btn-sm spacing'
+    = link_to "Add new location", new_location_url, class: 'btn btn-primary btn-sm'
