--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,6 +59,7 @@ h1, h2 {
 h3, h4 {
     color: $text-color;
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
 p {
@@ -188,4 +189,21 @@ body {
 .badge-primary {
   @extend .badge-primary;
   background-color: $primary-color;
+}
+
+.section-title {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: $text-color
+}
+
+.section-subtitle {
+  font-weight: normal;
+  font-size: 17px;
+  color: $text-color
+}
+
+.top- {
+  margin-top: 20px;
 }
