--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -4,5 +4,5 @@
   =form_for @event, class: 'form', :method => :post do |f|
     =render 'event_form_template', form: f
     .field
-      =f.submit "Create Event", class: 'btn btn-primary'
-      =link_to "Back to Events Page", events_path, class: 'btn btn-secondary'
+      =link_to "Back to Events Page", events_path, class: 'btn btn-outline-primary btn-sm'
+      =f.submit "Create Event", class: 'btn btn-primary btn-sm'
