--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -23,5 +23,6 @@
             %p.card-text Discover activities
             = link_to "Explore", events_url, class: "btn btn-primary btn-block"
             = link_to "Create", new_event_url, class: "btn btn-outline-primary btn-block"
-%hr
+            
+%hr.top-spacing
 %h2 Upcoming
