--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -10,15 +10,17 @@
     .col-6.text-left
       =submit_tag "Refine the list of locations", class: 'btn btn-primary filter-btn'
 
-.card-columns
-  -@locations.each do |loc|
-    .card
-      -if loc.image.present?
-        = image_tag(loc.image.url(:grid), :alt => %Q"Picture of #{loc.title}", :class =>"card-img-top")
-      .card-body
-        %h4.card-title #{loc.title}
-        %p.text-muted #{loc.address}
-        = link_to "Details", location_path(loc), class: "btn btn-outline-primary btn-sm"
+.container
+  .row
+    -@locations.each do |loc|
+      .col-md-6.col-lg-4.py-2
+        .card.h-100
+          -if loc.image.present?
+            = image_tag(loc.image.url(:grid), :alt => %Q"Picture of #{loc.title}", :class =>"card-img-top")
+            .card-body
+              %h4.card-title #{loc.title}
+              %p.text-muted #{loc.address}
+            = link_to "Details", location_path(loc), class: "card-footer btn btn-outline-primary btn-sm"
 
 %br
   = link_to "Back to Home", root_url, class: 'btn btn-outline-primary btn-sm home-link'
