--- a/app/views/recaps/edit.html.haml
+++ b/app/views/recaps/edit.html.haml
@@ -1,5 +1,5 @@
-%h1 Editing event_recap
+%h1 Editing recap
 
 = render 'recap_form_template'
 
-= link_to 'Back', event_path(@event)
+= link_to 'Back', event_path(@event), class: 'btn btn-outline-primary btn-sm'
