--- a/app/views/recaps/_recap_form_template.html.haml
+++ b/app/views/recaps/_recap_form_template.html.haml
@@ -13,4 +13,4 @@
     = f.label :description
     = f.text_area :description
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: 'btn btn-primary btn-sm'
