Enforced that a user must be logged in in order to create a new event

--- a/app/views/events/_event_form_template.html.haml
+++ b/app/views/events/_event_form_template.html.haml
@@ -1,4 +1,6 @@
 .field.form-group
+  =form.hidden_field :user_id, :value => current_user.id
+  
   =form.label :title, "Title"
   =form.text_field :title, required: :true, class: 'form-control'
 
