--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,5 +1,5 @@
 #main
-  %h2.header Create a New Event!
+  %h2.header Edit this event!
 
   =form_for @event, :method => :put do |f|
     =render 'event_form_template', form: f
