--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -180,3 +180,21 @@ body {
 .top-spacing {
   margin-top: 20px;
 }
+
+.carousel {
+    width: 100%;
+    height: 400px;
+    background-size:auto 100%;
+}
+
+
+
+.img-responsive,
+.thumbnail > img,
+.thumbnail a > img,
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  display: block;
+  width: 100%;
+  height: 400px;
+}
