--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,13 +1,27 @@
 
 %br
 #myCarousel.carousel.slide{"data-ride" => "carousel"}
+    %ol.carousel-indicators
+        %li.active{"data-slide-to" => "0", "data-target" => "#myCarousel"}
+        %li{"data-slide-to" => "1", "data-target" => "#myCarousel"}
+        %li{"data-slide-to" => "2", "data-target" => "#myCarousel"}
+
     .carousel-inner{:role => "listbox"}
         .carousel-item.active
             =image_tag("/assets/locationsCover.jpeg", :alt => "first slide", :class => "img-responsive")
+            .carousel-caption.d-none.d-md-block
+                %h3.first-slide-label first Slide Label
+                %p.first-slide-description description
         .carousel-item
             =image_tag("/assets/eventsCover.jpeg", :alt => "second slide", :class => "img-responsive")
+            .carousel-caption.d-none.d-md-block
+                %h3.second-slide-label Second Slide Label
+                %p.second-slide-description description
         .carousel-item
             =image_tag("/assets/locationsCover.jpeg", :alt => "third slide", :class => "img-responsive")
+            .carousel-caption.d-none.d-md-block
+                %h3.third-slide-label third Slide Label
+                %p.third-slide-description description
     %a.carousel-control-prev{"data-slide" => "prev", :href => "#myCarousel", :role => "button"}
         %span.carousel-control-prev-icon{"aria-hidden" => "true"}
         %span.sr-only Previous
