--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,7 +8,7 @@
 
     .carousel-inner{:role => "listbox"}
         .carousel-item.active
-            =image_tag("/assets/locationsCover.jpeg", :alt => "first slide", :class => "img-responsive")
+            =image_tag("/assets/trudyfitnesscenter.jpg", :alt => "first slide", :class => "img-responsive")
             .carousel-caption.d-none.d-md-block
                 %h3.first-slide-label first Slide Label
                 %p.first-slide-description description
