--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -186,7 +186,7 @@ body {
 .thumbnail a > img,
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-  display: block;
+  object-fit: cover;
   padding-bottom: 40px;
   width: 100%;
   height: 400px;
