--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -21,17 +21,19 @@
             .card-body
                 %h4.card-title Location
                 %p.card-text #{@event.address}
-
-    .top-spacing= link_to "Edit event", edit_event_url(@event), class: 'btn btn-outline-primary btn-sm'
+    -if @valid_permission
+        .top-spacing= link_to "Edit event", edit_event_url(@event), class: 'btn btn-outline-primary btn-sm'
     %hr
 
-    - if !@event.recap.nil?
+    -if !@event.recap.nil?
         .jumbotron.jumbotron-fluid.text-center
             .container
                 %h1.display-3 #{@event.recap.attendance} attendees
                 %p.lead #{@event.recap.description}
-        =link_to 'Edit recap', edit_event_recap_url(@event), class: 'btn btn-outline-primary btn-sm'
-    - else
-        =link_to 'Add recap', new_event_recap_url(@event), class: 'btn btn-primary btn-sm'
+        -if @valid_permission
+            =link_to 'Edit recap', edit_event_recap_url(@event), class: 'btn btn-outline-primary btn-sm'
+    -else
+        -if @valid_permission
+            =link_to 'Add recap', new_event_recap_url(@event), class: 'btn btn-primary btn-sm'
 
 .top-spacing= link_to 'Back to list of events', events_url, class: 'btn btn-outline-primary btn-sm'
