--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -203,3 +203,9 @@ body {
 .third-slide-label {
     color:white;
 }
+
+.img-top-sm {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
