--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,7 +1,7 @@
 
 .container
     -if @event.image.present?
-        .event-image= image_tag(@event.image.url(:header), :alt => %Q"#{@event.title} header image")
+        .event-image= image_tag(@event.image.url(:header), :alt => %Q"#{@event.title} header image", :class => 'cover-img')
     %h2.header #{@event.title}
     %h4 Person in charge: #{user_email(@event.user_id)}
 
