--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -15,7 +15,7 @@
             .card-body
                 %h4.card-title When
                 %p.card-text #{@event.readable_date}
-                %p.text-muted #{@now}
+                %p.text-muted #{pluralize(@days, "day")}
 
         .card
             .card-body
