Update header text size

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,11 @@ h3, h4 {
     font-weight: bold;
 }
 
+h5 {
+  color: $text-color;
+  font-weight: bold;
+}
+
 p {
     color: $text-color-light;
 }
