--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
         %a.navbar-brand{:href => root_path}
           %span
             = image_tag("/assets/rhcBrand.svg", :alt => "", :height => "40", :width => "40", :class => "d-inline-block")
-            = "Madison County"
+            = "Madison County Outdoors"
         %a.navbar-toggler{"data-target" => "#collapsed-bar", "data-toggle" => "collapse", type: "button"}
           %span.navbar-toggler-icon
 
