--- a/app/views/manage/index.html.haml
+++ b/app/views/manage/index.html.haml
@@ -1,9 +1,8 @@
-
-%h2 Upcoming Events
-- unless @upcoming_events.empty?
-    = render "events/list_events", events: @upcoming_events
+%h2 My Events
+- unless @user_events.empty?
+    = render "events/list_events", events: @user_events
 - else
-    %em No events found
+    %em You don't own any events
 
 %br
 = link_to "Back to Home", root_url,  class: 'btn btn-outline-primary btn-sm home-link'
