Added seeds including the is_reviewed fields. Changed models and controllers accordingly. Removed personal emails since it seems like we won't implement email notification

--- a/app/views/events/_event_form_template.html.haml
+++ b/app/views/events/_event_form_template.html.haml
@@ -1,6 +1,10 @@
 .field.form-group
-  =form.hidden_field :user_id, :value => current_user.id
-  
+  =form.hidden_field :user_id, required: :true, :value => current_user.id
+
+.field.form-group
+  =form.hidden_field :is_reviewed, required: :true, :value => false
+
+.field.form-group
   =form.label :title, "Title"
   =form.text_field :title, required: :true, class: 'form-control'
 
