Open graph meta tags

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
       %title= @title + " - Madison Country RHC"
     - else
       %title Madison County RHC
+    - if @og
+      = render 'layouts/og_meta_tags', og: @og
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
