--- a/app/views/events/_list_events.html.haml
+++ b/app/views/events/_list_events.html.haml
@@ -3,11 +3,7 @@
     - events.each do |event|
       .col-md-6.col-lg-4.py-2
         .card.h-100
-          - if event.days_until(DateTime.now) > 20
-            - date_detail = event.date.to_formatted_s(:short)
-          - else
-            - date_detail = event.days_until(DateTime.now) < 1 ? "Today" : pluralize(event.days_until(DateTime.now), "day")
-          %h4.card-header.text-center= date_detail
+          %h4.card-header.text-center= event.days_until(@now)
           -if event.image.present?
             = image_tag(event.image.url(:grid), :alt => %Q"#{event.title} image", :class => "card-img-top")
           .card-body
