--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -186,13 +186,16 @@ body {
   margin-top: 20px;
 }
 
+.carousel {
+    padding-bottom: 30px;
+}
+
 .img-responsive,
 .thumbnail > img,
 .thumbnail a > img,
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
   object-fit: cover;
-  padding-bottom: 40px;
   width: 100%;
   height: 400px;
 }
@@ -207,6 +210,60 @@ body {
 
 .third-slide-label {
     color:white;
+}
+
+.carousel-control {
+    padding-bottom: 40px;
+	top: 70%;
+	bottom: 0;
+	left: 0;
+	width: 15%;
+    font-size: auto;
+	color: #fff;
+	text-align: center;
+	opacity: 1;
+	text-shadow: none;
+}
+
+.carousel-control:hover {
+    color: #000;
+}
+
+.carousel-indicators {
+    bottom: 20px;
+}
+
+.carousel-indicators li {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: 1px;
+	text-indent: -999px;
+	cursor: pointer;
+    background-color: #000\9;
+	background-color: rgba(0,0,0,0);
+    border: 1px solid #16a085;
+	border-radius: 50%;
+}
+
+.carousel-indicators .active {
+    width: 12px;
+	height: 12px;
+	margin: 0;
+	background-color: #16a085;
+}
+
+.carousel-caption {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 10;
+	padding-top: 20px;
+	padding-bottom: 20px;
+    color: #fff;
+	text-align: center;
+	background: rgba(0,0,0,0.4);
 }
 
 .img-top-sm {
