featured and future scope added

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,12 +13,12 @@
                 %h3.first-slide-label first Slide Label
                 %p.first-slide-description description
         .carousel-item
-            =image_tag("/assets/eventsCover.jpeg", :alt => "second slide", :class => "img-responsive")
+            =image_tag("/assets/slidingdown.jpg", :alt => "second slide", :class => "img-responsive")
             .carousel-caption.d-none.d-md-block
                 %h3.second-slide-label Second Slide Label
                 %p.second-slide-description description
         .carousel-item
-            =image_tag("/assets/locationsCover.jpeg", :alt => "third slide", :class => "img-responsive")
+            =image_tag("/assets/colgatecampusrun.jpg", :alt => "third slide", :class => "img-responsive")
             .carousel-caption.d-none.d-md-block
                 %h3.third-slide-label third Slide Label
                 %p.third-slide-description description
